# TransformFn

./: .gitignore  .jscpd.json  Makefile  README.md  pyproject.toml
.claude/agents/: static-analysis-refactor.md  transformfn-implementer.md  transformfn-spec-writer.md
apps/algo-trade/: pyproject.toml
apps/algo-trade-app/: pyproject.toml
apps/algo-trade-app/algo_trade_app/: __init__.py  market_data.py  simulation.py  training.py  transforms.py
apps/algo-trade-app/algo_trade_dtype/: __init__.py  checks.py  generators.py  registry.py  types.py
apps/algo-trade-app/tests/: test_checks.py  test_generators.py  test_materializers.py  test_registry.py  test_simulation.py
apps/algo-trade/algo_trade_dag/: __init__.py  skeleton.py
apps/algo-trade/algo_trade_dtypes/: __init__.py  checks.py  generators.py  registry.py  types.py
apps/algo-trade/algo_trade_transforms/: __init__.py  market_data.py  simulation.py  training.py  transforms.py
apps/algo-trade/tests/: conftest.py
apps/algo-trade/tests/dag/: __init__.py
apps/algo-trade/tests/dtypes/: __init__.py  test_checks.py  test_generators.py  test_registry.py
apps/algo-trade/tests/transforms/: __init__.py  test_simulation.py
apps/example-app/pipeline_app/: dag.py  faulty_transforms.py
apps/example-app/tests/: test_faulty_auditor.py
apps/pipeline-app/: pyproject.toml
apps/pipeline-app/pipeline_app/: __init__.py  dag.py  faulty_transforms.py  runner.py  transforms.py
apps/pipeline-app/pipeline_dtype/: __init__.py  checks.py
apps/pipeline-app/pipeline_transforms/: transforms.py
apps/pipeline-app/tests/: test_faulty_auditor.py  test_runner.py  test_transforms.py
doc/: ALGO_TRADE_V3_PORTING.md  ARCHITECTURE.md  AUTO_ANNOTATION_RESOLUTION.md  CACHE_PERFORMANCE_TEST.md  LIST_TYPE_ANNOTATION_ISSUES.md  REFACTORING_PROJ_DTYPES.md  TICKET-ALGO_TRADE_PORTING.md  TICKET-ARCHITECTURE-IMPLEMENTATION.md  data_load_sample_code.md  dataframe-type-constraints.md
doc/dynamic-pipeline/: dag-dynamic-selection-test-spec.md  dag-dynamic-transform-selection.md
doc/transformfn_spec/: APPS_INCONSISTENCIES_WITH_UPDATED_GUIDELINES.md  algo-trade-market-data-ingestion-spec.md  algo-trade-phase2-feature-engineering-spec.md  algo-trade-phase3-training-prediction-spec.md  algo-trade-phase4-simulation-spec.md  spec-gap-summary.md
transformfn_workspace/: __init__.py
