[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformfn-workspace"
version = "0.1.0"
description = "Monorepo workspace for the TransformFn platform."
requires-python = ">=3.11"
dependencies = [
    "proj-dtypes",
    "xform-auditor",
    "pipeline-app",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.10.0",
    "pyright>=1.1.406",
    "ruff>=0.13.3",
    "radon>=6.0.1",
    "xenon>=0.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["transformfn_workspace"]

[tool.uv.workspace]
members = [
    "packages/xform-core",
    "packages/xform-auditor",
    "packages/proj-dtypes",
    "apps/pipeline-app",
]

[tool.uv.sources]
xform-core = { workspace = true }
proj-dtypes = { workspace = true }
xform-auditor = { workspace = true }
pipeline-app = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "packages/xform-core/tests",
    "packages/xform-auditor/tests",
    "packages/proj-dtypes/tests",
    "apps/pipeline-app/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "B", "S", "C90", "PLR"]
ignore = ["S101", "B008", "ANN204", "B017", "ANN201"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "B"]
"src/html_reporter.py" = ["E501", "C901", "PLR0912", "PLR0915", "PLR2004", "S112"]
"run_trace.py" = ["ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "3.11"
namespace_packages = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "basic"
include = ["packages", "apps", "src", "components"]
exclude = ["tests", ".venv"]

[tool.radon]
exclude = ["tests/*", "docs/*"]
cc_min = "A"
mi_min = 70

[tool.xenon]
max-absolute = "B"
max-modules = "B"
max-average = "A"
exclude = ["tests/*", "docs/*"]

[tool.coverage.run]
source = [
    "packages/xform-core/xform_core",
    "packages/xform-auditor/xform_auditor",
    "packages/proj-dtypes/proj_dtypes",
    "apps/pipeline-app/pipeline_app",
]
branch = true
