[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformfn"
version = "0.1.0"
description = "Monorepo workspace for the TransformFn platform."
requires-python = ">=3.11"
dependencies = [
    "xform-core",
    "xform-auditor",
    "algo-trade",
    "yfinance>=0.2.66",
    "ccxt>=4.5.11",
    "ipython>=9.6.0",
    "types-pyyaml>=6.0.12.20250915",
    "pycares>=4.11.0",
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
only-include = []

[tool.hatch.build.targets.wheel.force-include]
"pyproject.toml" = "transformfn-meta.txt"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.10.0",
    "ruff>=0.13.3",
    "radon>=6.0.1",
    "xenon>=0.9.3",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/algo-trade",
]

[tool.uv.sources]
xform-core = { workspace = true }
xform-auditor = { workspace = true }
algo-trade = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "packages/xform-core/tests",
    "packages/xform-auditor/tests",
    "apps/algo-trade/tests",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "B", "S", "C90", "PLR"]
ignore = ["S101", "B008", "ANN204", "B017", "ANN201"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
exclude = [".*/tests/.*", ".venv"]
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[tool.radon]
exclude = ["tests/*", "docs/*"]
cc_min = "A"
mi_min = 70

[tool.xenon]
max-absolute = "B"
max-modules = "B"
max-average = "A"
exclude = ["tests/*", "docs/*"]

[tool.coverage.run]
source = [
    "packages/xform-core/xform_core",
    "packages/xform-auditor/xform_auditor",
    "apps/algo-trade/algo_trade_dtypes",
    "apps/algo-trade/algo_trade_transforms",
]
branch = true
