[project]
name = "algo-trade-app"
version = "0.1.0"
description = "Algorithmic trading pipeline using TransformFn platform (algo_trade_v3 port)."
authors = [{ name = "TransformFn Authors" }]
requires-python = ">=3.11"
dependencies = [
    "xform-core",
    "xform-auditor",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "lightgbm>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algo_trade_app", "algo_trade_dtype"]

[tool.uv]
package = true
