[project]
name = "pipeline-app"
version = "0.1.0"
description = "Sample pipeline demonstrating TransformFn orchestration."
authors = [{ name = "TransformFn Authors" }]
requires-python = ">=3.11"
dependencies = [
    "xform-core",
    "proj-dtypes",
    "xform-auditor",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_app"]

[tool.uv]
package = true
